--- a/config.toml
+++ b/config.toml
@@ -443,7 +443,12 @@ enableGitInfo = true
     title = ""
     weight = 3
   [[menu.main]]
+    name = "更多"
+    url = "/about/"
+    title = ""
+    weight = 4
+  [[menu.main]]
     name = "Rime文档"
     url = "/rime/"
     title = ""
-    weight = 4
+    weight = 5
