--- a/config.toml
+++ b/config.toml
@@ -154,7 +154,7 @@ enableGitInfo = true
       # 主页显示头像的 URL
       # 将你的头像文件放置于 static 或者 assets 目录下
       # 文件路径是相对于 static 或者 assets 目录的
-      avatarURL = "/avatar.png"
+      avatarURL = "/avatar.webp"
       #  主页显示的网站标题 (支持 HTML 格式)
       title = ""
       # 主页显示的网站副标题
