--- a/config.toml
+++ b/config.toml
@@ -324,7 +324,7 @@ enableGitInfo = true
     # 位于 "themes/CodeIT/assets/data/cdn/" 目录
     # 可以在你的项目下相同路径存放你自己的数据文件:
     # "assets/data/cdn/"
-    data = "jsdelivr.yml"
+    # data = "jsdelivr.yml"
 
   #  兼容性设置
   [params.compatibility]
