Update DoIt theme

--- a/config/_default/menu.zh-cn.toml
+++ b/config/_default/menu.zh-cn.toml
@@ -51,7 +51,7 @@
   identifier = ""
   pre = ""
   post = ""
-  name = "分享站"
+  name = "网盘"
   url = "https://pan.nopdan.com/"
   title = ""
   weight = 6
