--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -2,13 +2,6 @@ baseURL = "https://nopdan.com"
 # [en, zh-cn, fr, pl, ...] determines default content language
 # [en, zh-cn, fr, pl, ...] 设置默认的语言
 defaultContentLanguage = "zh-cn"
-# theme
-# 主题
-theme = "DoIt"
-# themes directory
-# 主题目录
-# themesDir = ""
-
 # website title
 # 网站标题
 title = "单单的个人博客"
@@ -26,3 +19,19 @@ enableEmoji = true
 # ignore some build errors
 # 忽略一些构建错误
 # ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
+
+# theme
+# 主题
+theme = "DoIt"
+# themes directory
+# 主题目录
+# themesDir = ""
+
+# 网站语言, 仅在这里 CN 大写
+languageCode = "zh-CN"
+# 语言名称
+languageName = "简体中文"
+# 是否包括中日韩文字
+hasCJKLanguage = true
+# 版权描述，仅仅用于 SEO
+copyright = "This work is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License."
