--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -27,9 +27,24 @@ enablePWA = false
 license = '<a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a>'
 # [Experimental] Bundle js
 bundle = false
-# [Experimental] cache remote images, more info: https://github.com/nopdan/blog/pull/860#issue-1574342372
-# [试验性功能] 缓存图床图片，详情请见：https://github.com/nopdan/blog/pull/860#issue-1574342372
-cacheRemoteImages = false
+
+# Author config
+# 作者配置
+[author]
+name = "单单"
+email = "xci@live.com"
+link = "https://nopdan.com"
+avatar = "/avatar.webp"
+gravatarEmail = "xci@live.com"
+
+[image]
+  # cache remote images for better optimisations
+  # 缓存图片链接到本地
+  cacheRemote = false
+  # Image resizing and optimisation
+  # 图片缩放和优化
+  optimise = false
+
 # Header config
 # 页面头部导航栏配置
 [header]
@@ -145,9 +160,6 @@ cacheRemoteImages = false
   # whether to enable the fraction extended syntax
   # 是否使用 fraction 扩展语法
   fraction = true
-  # whether to enable the fontawesome extended syntax
-  # 是否使用 fontawesome 扩展语法
-  fontawesome = true
   # whether to show link to Raw Markdown content of the content
   # 是否显示原始 Markdown 文档内容的链接
   linkToMarkdown = true
